feat: register with email/password
