# app/Validators/CreateUserValidator.ts
@@ -1,0 +1,17 @@
+import { schema, rules } from '@ioc:Adonis/Core/Validator'
+import { HttpContextContract } from '@ioc:Adonis/Core/HttpContext'
+
+export default class CreateUserValidator {
+  constructor(protected ctx: HttpContextContract) {}
+
+  public schema = schema.create({
+    full_name: schema.string({ trim: true }, [rules.minLength(4)]),
+    email: schema.string({ trim: true }, [
+      rules.email(),
+      rules.unique({ table: 'users', column: 'email' }),
+    ]),
+    password: schema.string({}, [rules.minLength(8)]),
+  })
+
+  public messages = {}
+}
